--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -528,7 +528,7 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
   booktitle={Enterprise Distributed Object Computing Conference, 2007. EDOC 2007. 11th IEEE International},
   pages={287--287},
   year={2007},
-  organization={IEEE}
+ publisher={IEEE}
 }
 
 @inproceedings{fahland2010,
@@ -537,7 +537,7 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
   booktitle={Business Process Management Workshops},
   pages={477--488},
   year={2010},
-  organization={Springer}
+  publisher={Springer}
 }
 
 @inproceedings{pesic2006,
@@ -546,7 +546,7 @@ publisher = {Universität Ulm, Fakultät für Ingenieurwissenschaften und Inform
   booktitle={Business Process Management Workshops},
   pages={169--180},
   year={2006},
-  organization={Springer}
+  publisher={Springer}
 }
 
 @book{montali2010,
@@ -665,21 +665,12 @@ YEAR = {2013}
 }
 
 @misc{Bregenzer2014,
-author={Bregenzer, Stefan},
 title={Projektdurchführungstrategie als strategisches Prozessmodell in BPMN},
+author={Bregenzer, Stefan},
 url={http://blog.milsystems.de/2012/ 08/projektdurchfuehrungstrategie-als-strategisches- prozessmodell-in-bpmn/},
 month={august},
 year={2014}}
 
-@incollection{mendling2007makes,
-  title={What makes process models understandable?},
-  author={Mendling, Jan and Reijers, Hajo, A and Cardoso, Jorge},
-  booktitle={Business Process Management},
-  pages={48--63},
-  year={2007},
-  publisher={Springer},
-  adress={Heidelberg}
-}
 
 @phdthesis{thesis_maja,
   type = {PhD Thesis},
@@ -688,6 +679,16 @@ year={2014}}
   school = {Eindhoven University of Technology},
   year = 2008
 }
+
+@inproceedings{gruhn2006complexity,
+  title={Complexity metrics for business process models},
+  author={Gruhn, Volker and Laue, Ralf},
+  booktitle={9th international conference on business information systems (BIS 2006)},
+  volume={85},
+  pages={1--12},
+  year={2006}
+}
+
 
 
 
