--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -1,1 +1,11 @@
 \chapter{Validierung}\label{sec:chapter7}
+
+In diesem Kapitel werden die Ergbnisse des Vergleichs der ConDec - und BPMN-Modelle aus Kapitel 6 mit Hilfe einer Studie validiert.
+
+\section{Studie}
+
+\subsubsection{Teilnehmer}
+
+\subsubsection{Design der Studie}
+Die Umfrage wurde online mit einem Fragebogen durchgeführt.
+In einem ersten Teil 
