--- a/Masterarbeit 4/Tex/sources.tex
+++ b/Masterarbeit 4/Tex/sources.tex
@@ -32,7 +32,7 @@
  \begin{table}[H]
  \begin{tabular}{|p{0.5\textwidth}|p{0.5\textwidth}|}
 \hline
-\textbf{Notation} & \textbf{Erläuterung}\\
+\textbf{Constraint} & \textbf{Erläuterung}\\
 \hline
 \begin{center}
   \includegraphics[scale=0.5]{absence} %pdf, jpg, png...
