--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -689,7 +689,32 @@ year={2014}}
   year={2006}
 }
 
+@article{haisjackl2014understanding,
+  title={Understanding Declare models: strategies, pitfalls, empirical results},
+  author={Haisjackl, Cornelia and Barba, Irene and Zugal, Stefan and Soffer, Pnina and Hadar, Irit and Reichert, Manfred and Pinggera, Jakob and Weber, Barbara},
+  journal={Software \& Systems Modeling},
+  pages={1--28},
+  year={2014},
+  publisher={Springer}
+}
 
+@article{reijers2011study,
+  title={A study into the factors that influence the understandability of business process models},
+  author={Reijers, Hajo A and Mendling, Jan},
+  journal={Systems, Man and Cybernetics, Part A: Systems and Humans, IEEE Transactions on},
+  volume={41},
+  number={3},
+  pages={449--462},
+  year={2011},
+  publisher={IEEE}
+}
+
+@article{recker2007does,
+  title={Does it matter which process modelling language we teach or use? an experimental study on understanding process modelling languages without formal education},
+  author={Recker, Jan C and Dreiling, Alexander},
+  year={2007},
+  publisher={University of Southern Queensland}
+}
 
 
 
