--- a/Masterarbeit 4/Tex/sources.tex
+++ b/Masterarbeit 4/Tex/sources.tex
@@ -247,7 +247,7 @@ Beispiel: Korrekt: [A,C,A,B,B]; Inkorrekt: [A,C,B,B]\\
 
   \includegraphics[scale=0.5]{ExclusiveChoice} %pdf, jpg, png...
     \end{center} &
-\textbf{alternate precedence}\newline
+\textbf{exclusive choice}\newline
   Entweder A oder B kann ausgeführt werden. \newline
   Beispiel:  Korrekt: [A]; [B] Inkorrekt: [A,B] \\
 \hline
