--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -716,6 +716,16 @@ year={2014}}
   publisher={University of Southern Queensland}
 }
 
+@inproceedings{gruhn2006adopting,
+  title={Adopting the cognitive complexity measure for business process models},
+  author={Gruhn, Volker and Laue, Ralf},
+  booktitle={Cognitive Informatics, 2006. ICCI 2006. 5th IEEE International Conference on},
+  volume={1},
+  pages={236--241},
+  year={2006},
+  organization={IEEE}
+}
+
 
 
 
