--- a/Masterarbeit 4/Tex/chapter5.tex
+++ b/Masterarbeit 4/Tex/chapter5.tex
@@ -28,7 +28,7 @@ Hier soll untersucht werden, ob sich der Aufwand für die Modellierung bei den b
 \subsubsection{Klarheit}
 Die Prozessmodelle, welche jeweils in imperativer und deklarativer Prozessmodellierungssprache erstellt werden, sollen im Hinblick auf ihre Klarheit untersucht werden. Hierbei soll festgestellt werden, ob es wesentliche Unterschiede bei der Verständlichkeit der Prozessmodelle gibt, wenn diese in imperativer, bzw. deklarativer Prozessmodellierungssprache erstellt wurden. Denn fehlende Verständlichkeit eines Prozessmodells führt dazu, dass das Prozessmodell wenig Nutzen bringt. Insbesondere soll hier bei den imperativen Modellen die Anzahl an Verbindungen bzw. bei den deklarativen Modellen die Anzahl an Constraints zwischen Aktivitäten verglichen werden, da sich diese mit steigender Anzahl negativ auf die Verständlichkeit auswirken.\newline
 Hier soll auch insbesondere die Anzahl unterschiedlicher Gateways/Constraints betrachtet werden.  Da alle Gateways in BPMN und alle Constraints in ConDec eine unterschiedliche Sematik haben und diese jeweils verstanden werden muss, kann sich eine hohe Anzahl an verschieden Gateways, bzw. Constraints negtiv auf die Verständlichkeit auswirken. Es existieren Studien über den geistigen Aufwand, welcher für das Verständnis von BPMN-Notationselementen notwendig ist. Den einzelnen Notationselementen werden verschiedene geistige Gewichtungen zugewiesen. Ein Sequenzfluss hat auf Grund des weniger hohen geistigen Aufwandes beim Verstehen eine geistige Gewichtung von 1. Das Exklusive Gateway hat eine geistige Gewichtung von 2, falls es nur zwei ausgehende Kanten hat. Bei drei oder mehr ausgehenden Kanten hat es einen geistige Gewichtung von 3. Das parallele Gateway hat eine geistige Gewichtung von 4. Einem Inklusiven Gateway wird sogar eine geistige Gewichtung von 7 zugeschrieben \cite{gruhn2006adopting, thesis_maja}.\newline
-Leider existieren derzeit noch keine Studien über den geistigen Aufwand beim Verstehen der einzelnen Constraints bei ConDec. Da die Existenz-Constraints jedoch sehr einfach zu verstehen sind, werden sie beim Vergleich in Kapitel 6 mit den Sequenzflusselemeneten gleichgesetzt und haben somit auch einen geistige Gewichtung von 1. Da die Constraints in ConDec genau wie die Gateways in BPMN Patterns darstellen, müssten sie ebenfalls alle Werte für die geistige Gewichtung zwischen 2 und 7 annehmen. Da die Constraints jedoch nicht direkt den Gateways in BPMN zugeordnet werden können und sich somit die geistigen Gewichtungen der Gateways nicht auf die Constraints übertragen werden können wird im Vergleich in Kapitel 6 die jeweilige Anzahl an Gateways und Constraints im Modell für den Vergleich herangezogen. Es wird somit auch bei BPMN nicht zwischen unterschiedlichen Gateways unterschieden \cite{gruhn2006adopting, thesis_maja}. \newline
+Leider existieren derzeit noch keine Metriken über den geistigen Aufwand beim Verstehen der einzelnen Constraints bei ConDec. Jedoch gibt es bereits studien, welche sich anderweitig mit dem verstehen von deklarativen Prozessmodellen auseinandergesetzt haben. Da die Existenz-Constraints relativ einfach zu verstehen sind, werden sie beim Vergleich in Kapitel 6 mit den Sequenzflusselemeneten gleichgesetzt und haben somit auch in etwa eine geistige Gewichtung von 1. Da die Constraints in ConDec genau wie die Gateways in BPMN Patterns darstellen, müssten sie ebenfalls alle Werte für die geistige Gewichtung zwischen 2 und 7 annehmen. Da die Constraints jedoch nicht direkt den Gateways in BPMN zugeordnet werden können und sich somit die geistigen Gewichtungen der Gateways nicht auf die Constraints übertragen werden können wird im Vergleich in Kapitel 6 die jeweilige Anzahl an Gateways und Constraints im Modell für den Vergleich herangezogen. Es wird somit auch bei BPMN nicht zwischen unterschiedlichen Gateways unterschieden. Zudem wird auch die Anzhal an unterschiedlichen Gateways/Constraints betrachtet. Denn sowohl bei BPMN, als auch bei ConDec wurde in Studien herausgefunden, dass gerade die Kombination von vielen verschiedenen gateways/Constraints einen sehr großen Einfluß auf das Verstehen hat \cite{gruhn2006adopting, thesis_maja,haisjackl2014understanding}. \newline
 Weiterhin soll hier untersucht werden, ob es wesentliche Unterschiede in der Verständlichkeit der imperativen und deklarativen Prozessmodelle gibt, in Abhängigkeit der Größe des zugrunde liegenden Software Engineering Prozessmodells. Hierbei kann die Eignung der jeweiligen Modellierungssprache sehr gut festgestellt werden, da sie im Falle von schwerer/fehlender Verständlichkeit nicht zum Modellieren geeignet ist. Falls es Unterschiede in der Verständlichkeit der Prozessmodelle in Abhängigkeit der Größe des zugrunde liegenden Metamodells gibt, lassen sich hierbei Rückschlüsse auf die Eignung der Prozessmodellierungssprache in Bezug auf große/kleine Metamodelle ziehen \cite{leimeister2012,journals95, freund2007,reinshagen2009, becker2012prozessmanagement,koch2011,bpm07,thesis_maja}.
 
 
