--- a/Masterarbeit 4/Tex/chapter7.tex
+++ b/Masterarbeit 4/Tex/chapter7.tex
@@ -2,10 +2,45 @@
 
 In diesem Kapitel werden die Ergbnisse des Vergleichs der ConDec - und BPMN-Modelle aus Kapitel 6 mit Hilfe einer Studie validiert.
 
+\section{Forschungsfragen}
+
+\textbf{Forschungsfrage 1a}: 
+
+Ist die Punktsumme bei den Verständnisfragen insgesamt bei BPMN oder bei ConDec höher?\newline
+
+
+
+\textbf{Forschungsfrage 1b}: 
+
+Ist die Punktsumme bei den Verständnisfragen bei den kleinen Modellen bei BPMN oder bei ConDec höher?\newline
+
+\textbf{Forschungsfrage 1c}: 
+
+Ist die Punktsumme bei den Verständnisfragen bei den großen Modellen bei BPMN oder bei ConDec höher? \newline
+
+\textbf{Forschungsfrage 1d}: 
+
+Gibt es Unterschiede im Ergebnis in Abhängigkeit des Hintergrundwissesns der Versuchsobjekte über Prozessmodellierung?  \newline
+
+\textbf{Forschungsfrage 2a}: 
+
+Werden bei den Meinungsfragen insgesamt die Modelle von BPMN oder von ConDec präferiert? \newline
+
+\textbf{Forschungsfrage 2b}: 
+
+Werden bei den Meinungsfragen bei den kleinen Modellen die von BPMN oder von ConDec präferiert?\newline
+
+\textbf{Forschungsfrage 2c}: 
+
+Werden bei den Meinungsfragen bei den großen Modellen die von BPMN oder von ConDec präferiert?\newline
+
 \section{Studie}
 
 \subsubsection{Teilnehmer}
 
+Es wurden Studenten und Doktoranden aus dem Bereich Informatik/Medieninformatik befragt. Diese hatten unterschiedliches Hintergrundwissen zum Thema Prozessmodellierung. Wie Abbildung entnommen werden kann. Es fanden vorher keine Trainings mit den Teilnehmern in BPMN oder ConDec statt. Die Versuchsobjekte wurden bewusst nach unterschiedlichem Hintergrundwissen zum Thema Prozessmodellierung ausgewählt, um zu prüfen, inwiefern sich die Ergebnisse bei den Verständnisfragen zwischen Personen mit viel und wenig Hintergrundwissen zum Thema Prozessmodellierung unterscheiden.\newline
+
+
 \subsubsection{Design der Studie}
 Die Umfrage wurde online mit einem Fragebogen durchgeführt.
-In einem ersten Teil 
+In einem ersten Teil
